package main;

public class RegularUser extends User {

    public RegularUser() {
        super("delRio", "contraseña", "Mario");
    }
}