@startuml
class User {
  *username: String
  *password: String
  *name: String
  +getUsername(): String
  +getPassword(): String
  +getName(): String
  +setUsername(username: String): void
  +setPassword(password: String): void
  +setName(name: String): void
}

class Admin {
  *isAdmin: boolean
  +isAdmin(): boolean
  +setAdmin(isAdmin: boolean): void
}

class RegularUser {
}

class Option {
  *options: String[]
  *scanner: Scanner
  +display(): void
  +read(): int
  +closeScanner(): void
}

class MenuOption {
  *description: String
  +getDescription(): String
  +setDescription(description: String): void
}

class Manager {
  *users: User[]
  *authenticatedUser: User
  *selectedOption: MenuOption
  *maxUsers: int
  +addUser(user: User): void
  +authenticateUser(username: String, password: String): boolean
  +showMenu(): void
}

class UserManager {
  +registerUser(user: User): void
  +isUserAdmin(user: User): boolean
}

Admin --> User
RegularUser --> User
UserManager --> Manager
@enduml